<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plain_white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/cavemanLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cavemen_logo"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/floorNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/text_vertical_spacing"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bright_blue" />

        <TextView
            android:id="@+id/occupiedTablesField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_vertical_spacing"
            android:text="@string/occupied_tbls"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/freeTablesField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_vertical_spacing"
            android:text="@string/free_tbls"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/bookedTablesField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_vertical_spacing"
            android:text="@string/booked_tbls"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_vertical_spacing"
            android:text="@string/project_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/text_vertical_spacing"
            android:background="@color/secondary_gray" />

        <ListView
            android:id="@+id/projectList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ViewStub
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>
